--- a/hw/linuxsystem/linuxsystem.srcs/sources_1/bd/mainsoc/ip/mainsoc_mig_7series_0_0/xil_txt.in
+++ b/hw/linuxsystem/linuxsystem.srcs/sources_1/bd/mainsoc/ip/mainsoc_mig_7series_0_0/xil_txt.in
@@ -1,4 +1,4 @@
-SET_FLAG MODE INTERACTIVE
+SET_FLAG MODE BATCH
 SET_FLAG STANDALONE_MODE TRUE
 SET_PREFERENCE ipi_mode yes
 SET_PREFERENCE is_ip_locked false
@@ -9,13 +9,13 @@ SET_PREFERENCE package fbg676
 SET_PREFERENCE verilogsim true
 SET_PREFERENCE vhdlsim false
 SET_PREFERENCE designentry Verilog
-SET_PREFERENCE outputdirectory /home/wachag/.Xil/Vivado-9865-dreadnought/coregen/mainsoc_mig_7series_0_0/_tmp/
-SET_PREFERENCE subworkingdirectory /home/wachag/.Xil/Vivado-9865-dreadnought/coregen/mainsoc_mig_7series_0_0/_tmp/
+SET_PREFERENCE outputdirectory /home/wachag/Projects/kintex7/linux/hw/linuxsystem/linuxsystem.srcs/sources_1/bd/mainsoc/ip/mainsoc_mig_7series_0_0/_tmp/
+SET_PREFERENCE subworkingdirectory /home/wachag/Projects/kintex7/linux/hw/linuxsystem/linuxsystem.srcs/sources_1/bd/mainsoc/ip/mainsoc_mig_7series_0_0/_tmp/
 SET_PREFERENCE flowvendor Other
 SET_PREFERENCE tool vivado
 SET_PREFERENCE compnamestatus 0
 SET_PARAMETER component_name mainsoc_mig_7series_0_0
-SET_PARAMETER xml_input_file /home/wachag/Projects/kintex7/linux/hw/linuxsystem/linuxsystem.srcs/sources_1/bd/mainsoc/ip/mainsoc_mig_7series_0_0/board.prj
+SET_PARAMETER xml_input_file /home/wachag/Projects/kintex7/linux/hw/linuxsystem/linuxsystem.srcs/sources_1/bd/mainsoc/ip/mainsoc_mig_7series_0_0/mig_a.prj
 SET_PARAMETER data_dir_path /opt/Xilinx/Vivado/2017.3/data/ip/xilinx/mig_7series_v4_0
 SET_CORE_NAME Memory Interface Generator (MIG 7 Series)
 SET_CORE_VERSION 2.3
