--- a/sw/mmc.dts
+++ b/sw/mmc.dts
@@ -8,3 +8,17 @@
     voltage-ranges = < 3300 3300 >;
   };
 };
+&flashctl {
+  flash@0 {
+    compatible = "micron,n25q512ax3", "jedec,spi-nor";
+    reg = <0x0>;
+    spi-max-frequency = <25000000>;
+    m25p,fast-read;
+    #address-cells = <1>;
+    #size-cells = <1>;
+    partition@main {
+      label = "spi-flash";
+      reg = <0x002e0000 0x10000000>;
+    };
+  };
+};
